--- a/app/dishdetail.html
+++ b/app/dishdetail.html
@@ -39,7 +39,7 @@
                 <div class="media-body">
                     <h2 class="media-heading">{{dish.name}}
                         <span class="label label-danger">{{dish.label}}</span>
-                        <span class="badge">{{ddCtrl.dish.price| currency}}</span>
+                        <span class="badge">{{dish.price| currency}}</span>
                     </h2>
                     <p>{{dish.description}}</p>
 
@@ -133,6 +133,8 @@
 <!-- build:js scripts/main.js -->
     <script src="../bower_components/angular/angular.min.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="scripts/controllers.js"></script>
+    <script src="scripts/services.js"></script>
 <!-- endbuild -->
 
 </body>
